--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <p class="mb-0">
                       done a few cources on wordpress, I have a "Hands-on"
                       experiance in WordPress developmenty aswell iam pleased to
-                      help you with foth code and wordpress
+                      help you with code and wordpress
                     </p>
                   </div>
                 </div>
