--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <div class="row gy-4 justify-content-between">
             <div class="col-auto">
               <p class="mb-0">
-                Designed by <a href="#" class="fw-bold">| Hisenberg |</a>
+                Designed by <a href="#" class="fw-bold">| Chiranth |</a>
               </p>
             </div>
             <div class="col-auto">
