--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>| Hisenberg | The Web Developer</title>
+    <title>| Chiranth | The Web Developer</title>
     <link rel="icon" type="image" href="assets/Images/favicon.ico">
 
     <link rel="stylesheet" href="assets/CSS/bootstrap.min.css" />
